# folder-vision

./: .gitignore  LICENSE  README.md
folder-vision/: Makefile  PUBLISH.md  PUBLISHING.md  README.md  README_UV.md  READY_FOR_PUBLICATION.md  image_embeddings.pkl  install.bat  install.sh  install_test.sh  pyproject.toml  run.py  setup_path.py
folder-vision/clusters/: cluster_assignments.json  cluster_summary.json
folder-vision/folder_vision/: app.py
folder-vision/folder_vision.egg-info/: PKG-INFO  SOURCES.txt
folder-vision/folder_vision/html/: gallery.html  search.html
folder-vision/html/: cluster.html  results.html  search.html
folder-vision/scripts/: build_zip.sh
