[project]
name = "folder-vision"
version = "0.1.1"
description = "Simple FastAPI Hello World application that works everywhere"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Folder Vision Team", email = "team@foldervision.dev"}]
license = "MIT"
keywords = ["fastapi", "web", "api", "demo", "cli"]
dependencies = [
  "fastapi>=0.100.0,<1.0.0",
  "uvicorn[standard]>=0.25.0,<1.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0", 
  "transformers>=4.30.0",
  "pillow>=9.0.0",
  "numpy>=1.21.0",
  "python-multipart>=0.0.6",
  "scikit-learn>=1.0.0",
  "matplotlib>=3.0.0",
  "plotly>=5.0.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[project.urls]
Homepage = "https://github.com/folder-vision/folder-vision"
Repository = "https://github.com/folder-vision/folder-vision"
Issues = "https://github.com/folder-vision/folder-vision/issues"
Documentation = "https://github.com/folder-vision/folder-vision#readme"

[project.scripts]
folder-vision = "folder_vision.cli:main"
fv = "folder_vision.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "httpx>=0.25"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["folder_vision*"]

[build-system]
requires = ["setuptools>=64", "wheel", "build"]
build-backend = "setuptools.build_meta"
